--- a/pedidoLocalPropio_PabloH/src/main/resources/templates/local/update.html
+++ b/pedidoLocalPropio_PabloH/src/main/resources/templates/local/update.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{layout}">
 <head>
-    <title>Agregar Local</title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.css}" href="../../static/css/bootstrap.css">
+<title>Agregar Local</title>
+<link rel="stylesheet" href="/css/styles.css">
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+	integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+	crossorigin="anonymous">
+<meta charset="UTF-8">
 </head>
-
-<body>
-
-    <form action="#" th:action="@{/local/update}" th:object="${local}" method="post">
-        <input type="hidden" th:field="*{idLocal}" />
-        <p>
-            Direccion: <input type="text" th:field="*{direccion}" />
-        </p>
-        <p>
-            Latitud: <input type="number" step="any" th:field="*{latitud}" />
-        </p>
-        <p>
-            Longitud: <input type="number" step="any" th:field="*{longitud}" />
-        </p>
-        <p>
-            Telefono: <input type="text" th:field="*{telefono}" />
-        </p>
-        <input type="submit" value="Editar" />
-    </form>
-    <form action="#" th:action="@{/local/delete/{id}(id=${local.idLocal})}" method="post">
-        <input type="submit" value="Eliminar local" />
-    </form>
-    <form action="#" th:action="@{/local/atras}" method="post">
-        <input type="submit" value="Volver" />
-    </form>
-
-</body>
-
+<div layout:fragment="content">
+	<body>
+		<div id="agregarTitulo">
+			<h1>UNLA - Modificar Local</h1>
+		</div>
+		<div class="card bg-light col-md-7 mt-5 p-3 mx-auto">
+			<form action="#" th:action="@{/local/update}" th:object="${local}"
+				method="post">
+				<input type="hidden" th:field="*{idLocal}"  />
+			
+				<div class="form-group">
+					<label for="direccion">Dirección</label> <input type="text"
+						class="form-control" th:field="*{direccion}" id="dato">
+				</div>
+				<div class="form-group">
+					<label for="latitud">Latitud</label> <input type="text"
+						class="form-control" th:field="*{latitud}" id="dato">
+				</div>
+				<div class="form-group">
+					<label for="longitud">Longitud</label> <input type="text"
+						class="form-control" th:field="*{longitud}" id="dato">
+				</div>
+				<div class="form-group">
+					<label for="telefono">Teléfono</label> <input type="text"
+						class="form-control" th:field="*{telefono}" id="dato">
+				</div>
+				<input class="update" type="submit" value="Editar" />
+			</form>
+			<form action="#" th:action="@{/local/back}" method="post">
+				<button type="submit" class="btn btn-dark">Volver</button>
+			</form>
+		</div>
+	</body>
+</div>
 </html>
