--- a/pedidoLocalPropio_PabloH/src/main/resources/templates/producto/update.html
+++ b/pedidoLocalPropio_PabloH/src/main/resources/templates/producto/update.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{layout}">
+
 <head>
-<title>Example</title>
-<link rel="stylesheet" th:href="@{/css/bootstrap.css}" href="../static/css/bootstrap.css">
+<title>Modificar Producto</title>
+<link rel="stylesheet" href="/css/styles.css">
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+	integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+	crossorigin="anonymous">
+<meta charset="UTF-8">
 </head>
+<div layout:fragment="content">
 <body>
+	<nav id="agregarTitulo">
+		<h1>UNLA - Modificar Producto</h1>
+	</nav>
+	<div class="card bg-light col-md-7 mt-5 p-3 mx-auto">
+		<form action="#" th:action="@{/producto/update}"
+			th:object="${producto}" method="post">
+			<input type="hidden" th:field="*{idProducto}"  />
+			
+			<div class="form-group">
+				<label for="nombre">Nombre</label> <input type="text"
+					class="form-control" name="nombre" value="" th:field="*{nombre}" placeholder="Escribir nombre" />
+			</div>
+			<div class="form-group">
+				<label for="descripcion">Descripción</label> <input type="text"
+					class="form-control" name="descripcion"  th:field="*{descripcion}"
+					placeholder="Escribi la descripcion..." />
+			</div>
+			<div class="form-group">
+				<label for="precioUnitario">Precio</label> <input type="text"
+					class="form-control" name="precioUnitario"  th:field="*{precioUnitario}" placeholder="Escribir precio unitario" />
+			</div>
+			<input type="hidden" th:field="*{fechaAlta}" />
+			<input class="update" type="submit"  value="Editar Producto" />
+		</form>
 
-	<form action="#" th:action="@{/producto/update}"
-	th:object="${producto}" method="post">
-	<input type="hidden" th:field="*{idProducto}" />
-	</p>
-		<p>
-		Nombre: <input type="text" th:field="*{nombre}" />
-	</p>
-	<p>
-		Descripcion: <input type="text" th:field="*{descripcion}" />
-	</p>
-	<p>
-		Precio: <input type="text" th:field="*{precioUnitario}" />
-	</p>
-	<input type="hidden" th:field="*{fechaAlta}" /> <input type="submit"
-		value="Edit" />
-</form>
-
-<form action="#"
-	th:action="@{/producto/delete/{id}(id=${producto.idProducto})}"
-	method="post">
-	<input type="submit" value="Eliminar producto" />
-</form>
-<form action="#" th:action="@{/producto/back}" method="post">
-	<input type="submit" value="Volver" />
-</form>
-
-
+		<form action="#" th:action="@{/empleado/back}" method="post">
+			<button type="submit" class="btn btn-dark">Volver</button>
+		</form>		
+	</div>
 </body>
-
+</div>
 </html>
-
