--- a/pedidoLocalPropio_PabloH/src/main/resources/templates/empleado/update.html
+++ b/pedidoLocalPropio_PabloH/src/main/resources/templates/empleado/update.html
@@ -55,13 +55,8 @@
 					>
 			</div>
 			<div class="form-group">
-				<label for="gerente">Gerente</label> <select placeholder="gerente"
-					th:field="*{gerente}">
-					<option th:each="e : ${empleado}" th:value="${e.gerente}"
-						th:text="Sí"></option>
-					<option th:each="e : ${empleado}" th:value="${e.gerente}"
-						th:text="No"></option>
-				</select>
+				<label for="gerente">Gerente</label>
+            <input type="checkbox" th:field="*{gerente}" />
 					
 			</div>
 			<div class="form-group">
